--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@astrojs/vue": "^5.1.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "astro": "^5.12.4",
+    "astro": "5.13.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
