--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "gelembungsahabat-astro",
   "type": "module",
   "version": "0.0.1",
+  "packageManager": "pnpm@10.14.0",
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
@@ -16,6 +17,7 @@
     "@types/react-dom": "^19.1.6",
     "astro": "5.13.3",
     "lodash": "^4.17.21",
+    "motion": "^12.23.22",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
